# yolo-flutter-app

./: pubspec.yaml
.github/workflows/: build-android.yml.disabled  ci.yml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt
example/android/app/: build.gradle
